@@ -2,16 +2,27 @@ package gobpie;
 
 import com.google.gson.*;
 import magpiebridge.core.MagpieServer;
+import org.apache.commons.lang3.exception.ExceptionUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.eclipse.lsp4j.MessageParams;
 import org.eclipse.lsp4j.MessageType;
+import util.FileWatcher;
 
-import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.FileReader;
-import java.io.IOException;
-import java.nio.file.*;
+import java.nio.file.Files;
+import java.nio.file.Path;
+
+/**
+ * The Class GobPieConfReader.
+ * <p>
+ * Class for parsing and reading GobPie configuration file.
+ *
+ * @author Karoliine Holter
+ * @author Juhan Oskar Hennoste
+ * @since 0.0.2
+ */
 
 public class GobPieConfReader {
 
@@ -36,58 +47,32 @@ public class GobPieConfReader {
      */
     public GobPieConfiguration readGobPieConfiguration() {
 
-        // If gobpie configuration is not present, wait for it to be created
-        if (!new File(System.getProperty("user.dir") + "/" + gobPieConfFileName).exists()) {
-            String message = "GobPie configuration file is not found in the project root.";
-            String terminalMessage = message + "\nPlease add GobPie configuration file into the project root.";
-            forwardErrorMessageToClient(message, terminalMessage);
-            waitForGobPieConf();
-        }
-
-        // Parse the configuration file
-        GobPieConfiguration gobpieConfiguration = parseGobPieConf();
-
-        // Check if all required parameters have been set
-        // If not, wait for change and reparse
-        String goblintConf = gobpieConfiguration.getGoblintConf();
-        while (goblintConf == null || goblintConf.equals("")) {
-            String message = "goblintConf parameter missing from GobPie configuration file.";
-            String terminalMessage = message + "\nPlease add Goblint configuration file location into GobPie configuration as a parameter with name \"goblintConf\".";
-            forwardErrorMessageToClient(message, terminalMessage);
-            waitForGobPieConf();
-            gobpieConfiguration = parseGobPieConf();
-            goblintConf = gobpieConfiguration.getGoblintConf();
-        }
-
-        return gobpieConfiguration;
-
-    }
-
-
-    /**
-     * Method for waiting until GobPie configuration file is created or modified to satisfy the requirements.
-     */
-
-    private void waitForGobPieConf() {
-
-        // wait until GobPie configuration file is created before continuing
-        WatchService watchService;
-        try {
-            watchService = FileSystems.getDefault().newWatchService();
-            Path path = Paths.get(System.getProperty("user.dir"));
-            path.register(watchService, StandardWatchEventKinds.ENTRY_MODIFY);
-            WatchKey key;
-            while ((key = watchService.take()) != null) {
-                for (WatchEvent<?> event : key.pollEvents()) {
-                    if ((event.context()).equals(Paths.get(gobPieConfFileName))) {
-                        return;
-                    }
-                }
-                key.reset();
+        // If GobPie configuration is not present, wait for it to be created
+        Path gobPieConfPath = Path.of(gobPieConfFileName);
+        try (FileWatcher gobPieConfWatcher = new FileWatcher(gobPieConfPath)) {
+            if (!Files.exists(gobPieConfPath)) {
+                String message = "GobPie configuration file is not found in the project root.";
+                String terminalMessage = message + "\nPlease add GobPie configuration file into the project root.";
+                forwardErrorMessageToClient(message, terminalMessage);
+                gobPieConfWatcher.waitForModified();
             }
-        } catch (IOException | InterruptedException e) {
-            String message = "Waiting for GobPie configuration file failed.";
-            forwardErrorMessageToClient(message, message + e.getMessage());
+
+            // Parse the configuration file
+            GobPieConfiguration gobpieConfiguration = parseGobPieConf();
+
+            // Check if all required parameters have been set
+            // If not, wait for change and reparse
+            while (gobpieConfiguration.getGoblintConf() == null || gobpieConfiguration.getGoblintConf().equals("")) {
+                String message = "goblintConf parameter missing from GobPie configuration file.";
+                String terminalMessage = message + "\nPlease add Goblint configuration file location into GobPie configuration as a parameter with name \"goblintConf\".";
+                forwardErrorMessageToClient(message, terminalMessage);
+                gobPieConfWatcher.waitForModified();
+                gobpieConfiguration = parseGobPieConf();
+            }
+
+            return gobpieConfiguration;
+        } catch (InterruptedException e) {
+            return ExceptionUtils.rethrow(e);
         }
 
     }
@@ -131,7 +116,7 @@ public class GobPieConfReader {
 
     private void forwardErrorMessageToClient(String popUpMessage, String terminalMessage) {
         magpieServer.forwardMessageToClient(
-                new MessageParams(MessageType.Error, "Unable to start GobPie extension: " + popUpMessage + " Please check the output terminal of GobPie extension for more information.")
+                new MessageParams(MessageType.Error, "Problem starting GobPie extension: " + popUpMessage + " Check the output terminal of GobPie extension for more information.")
         );
         log.error(terminalMessage);
     }
